--- a/style.css
+++ b/style.css
@@ -7,17 +7,36 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0;
+    background: linear-gradient(135deg, #667eea, #764ba2);
     min-height: 100vh;
 }
 /* END OF TYPE SELECTORS */
 
 
 
+/* START OF CLASS SELECTORS */
+.project-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0;
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: white;
+}
+
+.calculator-container {
+    width: 30%;
+    aspect-ratio: 1 / 1.2;
+    background-color: black;
+    border: 4px solid grey;
+    padding: 8px;
+}
+/* END OF CLASS SELECTORS */
+
+
+
 /* START OF ID SELECTORS */
 /* END OF ID SELECTORS */
-
-
-
-/* START OF CLASS SELECTORS */
-/* END OF CLASS SELECTORS */
