--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* START OF TYPE SELECTORS */
 html {
     font-family: "Impact", "Haettenschweiler", "Arial Narrow Bold", "sans-serif";
-    font-size: 14px;
+    font-size: 1vw;
 }
 
 body {
@@ -27,12 +27,75 @@ body {
     color: white;
 }
 
-.calculator-container {
-    width: 30%;
+@media (min-width: 768px) {
+  .calculator-container {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  .calculator-container {
+    width: 80%;
+  }
+  .project-name {
+    font-size: 7rem;
+  }
+}
+
+.calculator-container { 
     aspect-ratio: 1 / 1.2;
     background-color: black;
-    border: 4px solid grey;
-    padding: 8px;
+    border: 0.2rem solid grey;
+    padding: 1.5rem;
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    color: white;
+}
+
+.display-container {
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #1a1a1a;
+    margin-bottom: 1.5rem;
+}
+
+.number-on-screen {
+    font-size: 3cqh;
+    text-align: right;
+    padding: 0 1rem;
+}
+
+.number-pad-container {
+    grid-row: 2 / 7;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 0.8rem;
+    row-gap: 0.8rem;
+}
+
+.clickable-button {
+    font-size: 3cqh;
+    border-radius: 100px;
+    cursor: pointer;
+    color: white;
+}
+
+.darkgrey {
+    background-color: #404040;
+}
+
+.lightgrey {
+    background-color: grey;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.two-cells {
+    grid-column: 1 / 3;
 }
 /* END OF CLASS SELECTORS */
 
